# game-dev-opengl

./: .gitignore  CMakeLists.txt  main.cpp  opengl.sln  shader.h
dependencies/libs/: glfw3.lib
opengl/: Source.cpp  glad.c  opengl.vcxproj
resources/shaders/: fragment.fs  vertex.vs
shaders/: fragment.fs  vertex.vs
